--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <title>MeiBo</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home.css" />
     <!--<linkl rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css?fbclid=IwAR3EJeESrZNkqrxdcHBiPWRizqS9qOAC9x2pk9y7wqJoox27mmYKzLcHvLrU"-->
 </head>
 
