--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     <div class="header">
         <!--<img src="img/logo_ig.png" class="logo" alt="" />-->
         <div class="logo">
-            <a href="index.html"><img src="img/logo_ig.png" class="logo" alt="" /></a>
+            <a href="./home.html"><img src="img/logo_ig.png" class="logo" alt="" /></a>
         </div>
         <form class="search-box">
             <input type="text" placeholder="search" name="search-query" id="search-input" />
