--- a/profile.html
+++ b/profile.html
@@ -2,17 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/profile.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous" />
 </head>
 
 <body>
     <div class="header-profile">
         <div class="header-left">
-            <div class="avatar"><img src="img/1.jpg" class="nav-icon user-profile" alt="" /></div>
+            <div class="avatar">
+                <img src="img/1.jpg" class="nav-icon user-profile" alt="" />
+            </div>
         </div>
         <div class="header-right">
             <h2>phuongnhung.2003</h2>
@@ -23,11 +26,20 @@
                 <button>Setting</button>
             </div>
 
+            <ul class="follow-profile">
+                <li>
+                    <div class="news"><span>0</span> bài viết</div>
+                </li>
+                <li>
+                    <div class="follow"><span>0</span> người theo dõi</div>
+                </li>
+                <li>
+                    <div class="following">Đang theo dõi <span>0</span> người dùng</div>
+                </li>
+            </ul>
         </div>
     </div>
-
 </body>
-<script>
-</script>
+<script></script>
 
 </html>
